test/visibility/except/queryExcept.good
queryExcept.chpl:6: syntax error: syntax error near '?t'
